06/27/2005  Ian Lewis   <IanLewis@member.fsf.org>

    * Removed some NOTICES to the log in the DirtyFilesDialog since they aren't
      necessary.
    * Added some new NOTICEs to the Log

06/21/2005  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated jsXe so that it uses the DirtyFilesDialog when selecting
      'Close All' from the File menu.
    * Updated the DirtyFilesDialog so that it doesn't close until all files are
      either saved or discarded.
    * Updated DirtyFilesDialog so that it saves it's geometry to the properties
      properly.
    * Updated jsXe so that recent files information is saved even when closing
      files through the DirtyFilesDialog

06/20/2005  Ian Lewis   <IanLewis@member.fsf.org>

    * Added Bianca Schoen to the about dialog for her contribution of a German
      translation.
    * Fixed bug that didn't mark the file as dirty when changing the indent
      and formatting and soft indent were true.

06/15/2005 Trish Hartnett <trishah136@users.sourceforge.net>
	* Added tooltip texts for the checkboxes/scroll panes of the Options dialog box.

06/13/2005 Trish Hartnett <trishah136@users.sourceforge.net>

	* Added functionality to DocumentBuffer saveAs() method, so that the fileanme
	  of the file in the buffer (e.g. Untitled-1), is the filename which appears in 
	  the filename text field in the JFileChooser.
	* Added variable confirmClose into method signature of DocumentBuffer close() 
	  method. This variable is a flag. If it's set to true then the Dialog box 
	  "Untitled -1 unsaved! Save it now?" does appear, else the code sirectly skips 
	  to the DocumentBuffer save method. This was done because if a user clicks 
	  "Save Selected" on the DirtyFilesDialog then there is no need to pop up another
	  Dialog box saying "Untitled -1 unsaved! Save it now?", the user should instead 
	  be immeadiately shown the JFileChooser.
	* Changed method close in TabbedView. Previously this method called JSXE's 